# fastapi-template

./: README.md  pyproject.toml
app/: main.py
app/api/: router.py
app/api/content/: controller.py  schemas.py  services.py
